	update: create network and link to a VLAN at once
	update: 8021Q switch autosync status is now managed by SYNC_802Q_LISTSRC config constraint
	new feature: you can obtain who has made tag assignment, object's ports or IPv4 address changes by hovering cursor on these entities
	new feature: adjustable quick links at the top of the page
0.19.7
	update: add SNMP support for several more switches
	update: improve consistency of stored attribute data (#449)
0.19.6 2011-07-02
	bugfix: port linker was not working (#446)
	bugfix: PHP warning messages appeared when searching (#443)
	bugfix: VM selector popup was not working (#447)
0.19.5 2011-06-29
	bugfix: dictionary record updates did not work (#430)
	bugfix: fix 802.1Q for XOS12
	bugfix: don't fail on a read-only connection accessing a file
	bugfix: pencil editor cell resizing issues
	bugfix: remember last tab function fixed
	bugfix: DB schema upgrade procedure handles SQL errors correctly
	update: better eDirectory support by Walery Wysotsky
	update: add new port type for VMs and virtual switches (by Aaron Dummer)
	update: SNMP support for C2960-48TC-S
	update: improve handling of malformed navigation structures
	update: improve caching of object attributes data
	update: {$runs_8021Q} works for IPv4/IPv6 networks
	update: list new wireless APs
	update: restrict search results according to user's permissions
	update: make link cable IDs searchable
	update: set default timeouts for LDAP cache
	update: ability to search a remote port while linking ports together and to resolve port type conflicts in-place
	new feature: attribute-level access control for objects
	new feature: ability to open a terminal session to a device by clicking on its FQDN
	new feature: inverting tags on cell filter pages by clicking the checkboxes with Ctrl key
0.19.4 2011-04-14
	bugfix: tag selector was not working with magic_quotes enabled
	update: new techniques of changing the directory layout are now supported by installer and upgrader