@@ -120,6 +120,7 @@ $tab['object']['files'] = 'Files';
 $tab['object']['8021qorder'] = '802.1Q order';
 $tab['object']['8021qports'] = '802.1Q ports';
 $tab['object']['8021qsync'] = '802.1Q sync';
+$tab['object']['cactigraphs'] = 'Cacti Graphs';
 $tabhandler['object']['default'] = 'renderObject';
 $tabhandler['object']['edit'] = 'renderEditObjectForm';
 $tabhandler['object']['log'] = 'renderObjectLogEditor';
@@ -141,6 +142,7 @@ $tabhandler['object']['editrspvs'] = 'renderObjectSLB';
 $tabhandler['object']['8021qorder'] = 'render8021QOrderForm';
 $tabhandler['object']['8021qports'] = 'renderObject8021QPorts';
 $tabhandler['object']['8021qsync'] = 'renderObject8021QSync';
+$tabhandler['object']['cactigraphs'] = 'renderObjectCactiGraphs';
 $trigger['object']['rackspace'] = 'trigger_rackspace';
 $trigger['object']['ports'] = 'trigger_ports';
 $trigger['object']['ipv4'] = 'trigger_ipv4';
@@ -158,6 +160,7 @@ $trigger['object']['tags'] = 'trigger_tags';
 $trigger['object']['8021qorder'] = 'trigger_object_8021qorder';
 $trigger['object']['8021qports'] = 'trigger_object_8021qports';
 $trigger['object']['8021qsync'] = 'trigger_object_8021qsync';
+$trigger['object']['cactigraphs'] = 'triggerCactiGraphs';
 $ophandler['object']['edit']['linkEntities'] = 'linkEntities';
 $ophandler['object']['edit']['unlinkEntities'] = 'unlinkEntities';
 $ophandler['object']['rackspace']['updateObjectAllocation'] = 'updateObjectAllocation';
@@ -204,6 +207,9 @@ $ophandler['object']['8021qports']['exec8021QRecalc'] = 'process8021QRecalcReque
 $ophandler['object']['8021qsync']['exec8021QPull'] = 'process8021QSyncRequest';
 $ophandler['object']['8021qsync']['exec8021QPush'] = 'process8021QSyncRequest';
 $ophandler['object']['8021qsync']['resolve8021QConflicts'] = 'resolve8021QConflicts';
+$ophandler['object']['cactigraphs']['add'] = 'addCactiGraph';
+$ophandler['object']['cactigraphs']['del'] = 'delCactiGraph';
+$ophandler['object']['cactigraphs']['update'] = 'updateCactiGraph';
 $delayauth['object-8021qports-save8021QConfig'] = TRUE;
 $delayauth['object-livevlans-setPortVLAN'] = TRUE;
 $delayauth['object-8021qorder-add'] = TRUE;
